--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "swr": "2.2.0"
   },
   "devDependencies": {
+    "@types/node": "^24.9.2",
+    "@types/react": "^19.2.2",
     "autoprefixer": "10.4.14",
+    "csv-parse": "5.4.0",
     "postcss": "8.4.23",
     "tailwindcss": "3.4.7",
-    "csv-parse": "5.4.0"
+    "typescript": "^5.9.3"
   }
 }
